project/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: broker-service.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: broker
            port: 
              number: 8082
  tls:
    - hosts:
        - broker.example.com
